Bug 1114948 - Use NS_lroundf instead of NS_roundf in tiling code to avoid inconsistent behavior around zero. r=jrmuizel, a=bajaj